--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     </nav>
     <div class="title">
       <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;font-size: 300%;color: white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
-          <h1>치지직</h1>
-          <h3 style="
+          <div>치지직</div>
+          <div style="
       font-size: 0.8em;
-  ">우리의 설레임이 구워지는 소리</h3>
+  ">우리의 설레임이 구워지는 소리</div>
         </div>
     </div>
     <div class="storeDescription">
@@ -72,15 +72,15 @@
       <br>
     </div>
     <div id="mainMenus">
-      <h1 align="center"><메인 메뉴></h1>
+      <div align="center"><메인 메뉴></div>
       <div class="menu" align="center">
         <ul style="padding-left: 0px;">
           <ol style="display: block;padding-left: 0px;">
-              <img class="mainPhoto" src="./img/Menu List/1.Steak/Steak 1.jpg" >
+              <img class="mainPhoto" src="./img/Menu List/1.Steak/Steak 1.png" >
               <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
-                <ol><img src="./img/Menu List/1.Steak/Steak 1.jpg" style="border:groove;"></ol>
-                <ol><img src="./img/Menu List/1.Steak/Steak 2.jpg"></ol>
-                <ol><img src="./img/Menu List/1.Steak/Steak 3.jpg"></ol>
+                <ol><img src="./img/Menu List/1.Steak/Steak 1.png" style="border:groove;"></ol>
+                <ol><img src="./img/Menu List/1.Steak/Steak 2.png"></ol>
+                <ol><img src="./img/Menu List/1.Steak/Steak 3.png"></ol>
               </ul>
               <h2>크림 수비드 스테이크</h2>
               <h3>가격 : 14,000원</h3>
@@ -119,6 +119,6 @@
 
   </body>
   <script>
-    
+
   </script>
 </html>
