--- a/index.html
+++ b/index.html
@@ -58,16 +58,13 @@
         </ul>
     </nav>
     <div class="title">
-      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;font-size: 300%;color: white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
-          <div>치지직</div>
-          <div style="
-      font-size: 0.8em;
-  ">우리의 설레임이 구워지는 소리</div>
-        </div>
+      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;font-size: 300%;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
+        <div style="font-size: 250%;">치지직</div>
+        <div style="font-size: 70%;padding-top: 5%;">우리의 설레임이 구워지는 소리</div>
     </div>
     <div class="storeDescription">
       <br>
-      <h3>영업시간 : 월,수,목,금,토,일 11:00 ~ 17:00 (화요일 휴무)</h3>
+      <div align="center"><b>영업시간 : 월,수,목,금,토,일 11:00 ~ 17:00</b> (화요일 휴무)</div>
       <br>
       <br>
     </div>
