--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <div style="font-size: 250%;">치지직</div>
         <div style="font-size: 70%;padding-top: 5%;">우리의 설레임이 구워지는 소리</div>
     </div>
-    <div class="storeDescription" style="font-size: 150%;">
+    <div  align="center" class="storeDescription" style="font-size: 200%;">
       <br>
-      <div align="center" style="font-size: 30%;"><b>영업시간 : 월,수,목,금,토,일 11:00 ~ 17:00</b> (화요일 휴무)</div>
+      <div><b>영업시간 : 월,수,목,금,토,일 11:00 ~ 17:00</b> (화요일 휴무)</div>
       <br>
       <br>
     </div>
