--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
   </head>
   <body style="margin-left: 0px;margin-right: 0px;background-color:#e7dedb;">
     <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
-        <h1 style="margin-right:2%; color:#b7755d;">Language</h1>
-        <ul align="center" id="language" style="background-color: #e7dedb;display: /*none;*/ flow-root;margin-left: 78%;position: absolute;padding-left: 6%;padding-right: 6%;padding-bottom: 10px;color: #b7755d;font-weight: bolder;">
+        <div style="margin-right:2%;font-size: 80%;color:#b7755d;"><b>Language</b> <img src="./img/National Flags/1.Korea Flag.jpg" style="
+    width: 4%;
+"></div>
+        <ul align="center" id="language" style="background-color: #e7dedb;display: /*none;*/ flow-root;margin-left: 78%;position: absolute;padding-left: 6%;padding-right: 6%;padding-bottom: 10px;color: #b7755d;font-weight: bolder;font-size: 80%;">
           <ol>한국어</ol>
           <ol>English</ol>
           <ol>中文</ol>
@@ -62,7 +64,7 @@
         <div style="font-size: 250%;">치지직</div>
         <div style="font-size: 70%;padding-top: 5%;">우리의 설레임이 구워지는 소리</div>
     </div>
-    <div  align="center" class="storeDescription" style="font-size: 150%;">
+    <div  align="center" class="storeDescription" style="font-size: 80%;">
       <br>
       <div><b>영업시간 : 월,수,목,금,토,일 11:00 ~ 17:00</b><br>(화요일 휴무)</div>
       <br>
