--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   </head>
   <body style="margin-left: 0px;margin-right: 0px;background-color:#e7dedb;">
     <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
-        <div style="margin-right:2%;font-size: 80%;color:#b7755d;"><b>Language</b> <img src="./img/National Flags/1.Korea Flag.jpg" style="
+        <div style="margin-right:2%;font-size: 80%;color:#b7755d;"><b>Language</b> /*<img src="./img/National Flags/1.Korea Flag.jpg" style="
     width: 4%;
-"></div>
+">*/</div>
         <ul align="center" id="language" style="background-color: #e7dedb;display: /*none;*/ flow-root;margin-left: 78%;position: absolute;padding-left: 6%;padding-right: 6%;padding-bottom: 10px;color: #b7755d;font-weight: bolder;font-size: 80%;">
           <ol>한국어</ol>
           <ol>English</ol>
