--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<html>
-  <head>
+<html><head>
     <script src="./js/jquery-3.6.3.min.js"></script>
       <title>Chizizic_Jeju</title>
       <style>
@@ -49,42 +48,45 @@
   </head>
   <body style="margin-left: 0px;margin-right: 0px;background-color:#e7dedb;">
     <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
-        <div style="margin-right:2%;font-size: 80%;color:#b7755d;"><b>Language</b> /*<img src="./img/National Flags/1.Korea Flag.jpg" style="
-    width: 4%;
-">*/</div>
+        <div style="margin-right:2%;font-size: 70%;color:#b7755d;"><b>Language</b>
         <ul align="center" id="language" style="background-color: #e7dedb;display: /*none;*/ flow-root;margin-left: 78%;position: absolute;padding-left: 6%;padding-right: 6%;padding-bottom: 10px;color: #b7755d;font-weight: bolder;font-size: 80%;">
           <ol>한국어</ol>
           <ol>English</ol>
           <ol>中文</ol>
           <ol>日本語</ol>
         </ul>
-    </nav>
+    </div></nav>
     <div class="title">
       <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;font-size: 300%;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
         <div style="font-size: 250%;">치지직</div>
         <div style="font-size: 70%;padding-top: 5%;">우리의 설레임이 구워지는 소리</div>
     </div>
-    <div  align="center" class="storeDescription" style="font-size: 80%;">
+    <div align="center" class="storeDescription" style="font-size: 80%;">
       <br>
       <div><b>영업시간 : 월,수,목,금,토,일 11:00 ~ 17:00</b><br>(화요일 휴무)</div>
       <br>
       <br>
     </div>
     <div id="mainMenus">
-      <div align="center"><메인 메뉴></div>
+      <div align="center"><b>MENU</b></div>
       <div class="menu" align="center">
         <ul style="padding-left: 0px;">
           <ol style="display: block;padding-left: 0px;">
-              <img class="mainPhoto" src="./img/Menu List/1.Steak/Steak 1.png" >
+              <img class="mainPhoto" src="./img/Menu List/1.Steak/Steak 1.png">
               <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
                 <ol><img src="./img/Menu List/1.Steak/Steak 1.png" style="border:groove;"></ol>
                 <ol><img src="./img/Menu List/1.Steak/Steak 2.png"></ol>
                 <ol><img src="./img/Menu List/1.Steak/Steak 3.png"></ol>
               </ul>
-              <h2>크림 수비드 스테이크</h2>
-              <h3>가격 : 14,000원</h3>
-              <div class="info">
-                <h3>수비드로 조리한 제주산 돼지 안심 스테이크와 크림소스</h3>
+              <div class="menuName" style="
+    font-size: 13px;
+">크림 수비드 스테이크</div>
+              <div class="menuPrice" style="
+    font-size: 11px;
+    margin-top: 20px;
+">가격 : 14,000원</div>
+              <div class="info" style="font-size: 10px;margin-top: 20px;">
+                <div>수비드로 조리한 제주산 돼지 안심 스테이크와 크림소스</div>
               </div>
           </ol>
         </ul>
@@ -116,8 +118,9 @@
       <h2>원산지 표기</h2>
     </div>
 
-  </body>
+
   <script>
 
   </script>
-</html>
+
+</div></body></html>
