--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         ul.subPhotos ol img
         {
-          width:17%;
+          width:166.594px;
           margin-left: 2%;
           margin-right: 2%;
           display: inline;
@@ -31,18 +31,30 @@
 
         .menu
         {
-          margin-bottom: 15%;
+          margin-bottom: 147px;
         }
 
         .menu .info
         {
           color: dimgray;
+          font-size: 10px;
+          margin-top: 20px;
         }
 
         .menu .mainPhoto
         {
-          width: 70%;
+          width: 637px;
           border: outset;
+        }
+
+        .menu .menuName
+        {
+          font-size: 13px;
+        }
+        .menu .menuPrice
+        {
+          font-size: 11px;
+          margin-top: 20px;
         }
       </style>
   </head>
@@ -78,14 +90,9 @@
                 <ol><img src="./img/Menu List/1.Steak/Steak 2.png"></ol>
                 <ol><img src="./img/Menu List/1.Steak/Steak 3.png"></ol>
               </ul>
-              <div class="menuName" style="
-    font-size: 13px;
-">크림 수비드 스테이크</div>
-              <div class="menuPrice" style="
-    font-size: 11px;
-    margin-top: 20px;
-">가격 : 14,000원</div>
-              <div class="info" style="font-size: 10px;margin-top: 20px;">
+              <div class="menuName">크림 수비드 스테이크</div>
+              <div class="menuPrice">가격 : 14,000원</div>
+              <div class="info">
                 <div>수비드로 조리한 제주산 돼지 안심 스테이크와 크림소스</div>
               </div>
           </ol>
@@ -100,10 +107,10 @@
                 <ol><img src="./img/Menu List/2.EggInHell/EggInHell2.jpg"></ol>
                 <ol><img src="./img/Menu List/2.EggInHell/EggInHell3.jpg"></ol>
               </ul>
-              <h1>에그인헬</h1>
-              <h2>가격 : 9,000원</h2>
+              <div class="menuName">에그인헬</div>
+              <div class="menuPrice">가격 : 9,000원</div>
               <div class="info">
-                <h2>토마토소스에 반숙계란을 올리고, 각종야채와 향신료가 들어간 스튜</h2>
+                <div>토마토소스에 반숙계란을 올리고, 각종야채와 향신료가 들어간 스튜</div>
               </div>
           </ol>
         </ul>
