--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
           padding: 0px;
         }
 
+        span
+        {
+            display: block;
+        }
+
 
         ul.subPhotos ol
         {
@@ -60,27 +65,31 @@
   </head>
   <body style="margin-left: 0px;margin-right: 0px;background-color:#e7dedb;">
     <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
-        <div style="margin-right:2%;font-size: 70%;color:#b7755d;"><b>Language</b>
-        <ul align="center" id="language" style="background-color: #e7dedb;display: /*none;*/ flow-root;margin-left: 78%;position: absolute;padding-left: 6%;padding-right: 6%;padding-bottom: 10px;color: #b7755d;font-weight: bolder;font-size: 80%;">
+        <div style="margin-right:2%;font-size: 0.9em;color:#b7755d;"><span><b>Language</b></span>
+        <ul align="center" id="language" style="background-color: #e7dedb;display: /*none;*/ flow-root;margin-left: 78%;position: absolute;padding-left: 6%;padding-right: 6%;padding-bottom: 10px;color: #b7755d;font-weight: bolder;font-size: 15px;">
           <ol>한국어</ol>
           <ol>English</ol>
           <ol>中文</ol>
           <ol>日本語</ol>
         </ul>
-    </div></nav>
+    </div>
+  </nav>
     <div class="title">
-      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;font-size: 300%;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
-        <div style="font-size: 250%;">치지직</div>
-        <div style="font-size: 70%;padding-top: 5%;">우리의 설레임이 구워지는 소리</div>
+      <div align="center" style="padding-top: 80px;padding-bottom: 80px;padding-left: 80px;padding-right: 80px;background-color: #b7755d;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
+        <span style="font-size: 110pt;">치지직</span>
+        <span style="font-size: 25pt;padding-top: 40px;">우리의 설레임이 구워지는 소리</span>
     </div>
-    <div align="center" class="storeDescription" style="font-size: 80%;">
+    <div align="center" class="storeDescription" style="
+    margin-top: 30px;
+    margin-bottom: 20px;
+">
       <br>
-      <div><b>영업시간 : 월,수,목,금,토,일 11:00 ~ 17:00</b><br>(화요일 휴무)</div>
+      <span style="font-size: 19.7pt;"><b>영업시간 : 월,수,목,금,토,일 11:00 ~ 17:00</b> (화요일 휴무)</span>
       <br>
       <br>
-    </div>
+    </div><span align="center" style="font-size: 21.8pt;"><b>MENU</b></span>
     <div id="mainMenus">
-      <div align="center"><b>MENU</b></div>
+
       <div class="menu" align="center">
         <ul style="padding-left: 0px;">
           <ol style="display: block;padding-left: 0px;">
@@ -90,10 +99,10 @@
                 <ol><img src="./img/Menu List/1.Steak/Steak 2.png"></ol>
                 <ol><img src="./img/Menu List/1.Steak/Steak 3.png"></ol>
               </ul>
-              <div class="menuName">크림 수비드 스테이크</div>
-              <div class="menuPrice">가격 : 14,000원</div>
+              <span class="menuName">크림 수비드 스테이크</span>
+              <span class="menuPrice">가격 : 14,000원</span>
               <div class="info">
-                <div>수비드로 조리한 제주산 돼지 안심 스테이크와 크림소스</div>
+                <span>수비드로 조리한 제주산 돼지 안심 스테이크와 크림소스</span>
               </div>
           </ol>
         </ul>
@@ -130,4 +139,7 @@
 
   </script>
 
-</div></body></html>
+</div>
+
+
+</body></html>
