--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         span
         {
             display: block;
+            font-size:
         }
 
 
@@ -42,7 +43,7 @@
         .menu .info
         {
           color: dimgray;
-          font-size: 10px;
+          font-size: 20px;
           margin-top: 20px;
         }
 
@@ -54,84 +55,87 @@
 
         .menu .menuName
         {
-          font-size: 13px;
+          font-size: 25px;
         }
         .menu .menuPrice
         {
-          font-size: 11px;
+          font-size: 23px;
           margin-top: 20px;
+        }
+
+        .storeDescription span
+        {
+          margin-bottom: 15px;
         }
       </style>
   </head>
-  <body style="margin-left: 0px;margin-right: 0px;background-color:#e7dedb;">
+  <body style="margin-left: 0px;margin-right: 0px;background-color:#e7dedb;font-size: 14px;">
     <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
-        <div style="margin-right:2%;font-size: 0.9em;color:#b7755d;"><span><b>Language</b></span>
-        <ul align="center" id="language" style="background-color: #e7dedb;display: /*none;*/ flow-root;margin-left: 78%;position: absolute;padding-left: 6%;padding-right: 6%;padding-bottom: 10px;color: #b7755d;font-weight: bolder;font-size: 15px;">
-          <ol>한국어</ol>
-          <ol>English</ol>
-          <ol>中文</ol>
-          <ol>日本語</ol>
-        </ul>
-    </div>
-  </nav>
+      <div style="margin-right:2%;font-size: 15px;color:#b7755d;">
+        <span><b>Language</b></span>
+      </div>
+    </nav>
     <div class="title">
-      <div align="center" style="padding-top: 80px;padding-bottom: 80px;padding-left: 80px;padding-right: 80px;background-color: #b7755d;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
-        <span style="font-size: 110pt;">치지직</span>
-        <span style="font-size: 25pt;padding-top: 40px;">우리의 설레임이 구워지는 소리</span>
+      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;font-size: 300%;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
+        <span style="font-size: 145px;">치지직</span>
+        <span style="font-size: 20.6pt;padding-top: 8%;">우리의 설레임이 구워지는 소리</span>
     </div>
-    <div align="center" class="storeDescription" style="
-    margin-top: 30px;
-    margin-bottom: 20px;
-">
-      <br>
-      <span style="font-size: 19.7pt;"><b>영업시간 : 월,수,목,금,토,일 11:00 ~ 17:00</b> (화요일 휴무)</span>
-      <br>
-      <br>
-    </div><span align="center" style="font-size: 21.8pt;"><b>MENU</b></span>
-    <div id="mainMenus">
+    <div class="contents">
+      <div align="center" class="storeDescription" style="font-size: 25px;">
+        <br>
 
-      <div class="menu" align="center">
-        <ul style="padding-left: 0px;">
-          <ol style="display: block;padding-left: 0px;">
-              <img class="mainPhoto" src="./img/Menu List/1.Steak/Steak 1.png">
-              <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
-                <ol><img src="./img/Menu List/1.Steak/Steak 1.png" style="border:groove;"></ol>
-                <ol><img src="./img/Menu List/1.Steak/Steak 2.png"></ol>
-                <ol><img src="./img/Menu List/1.Steak/Steak 3.png"></ol>
-              </ul>
-              <span class="menuName">크림 수비드 스테이크</span>
-              <span class="menuPrice">가격 : 14,000원</span>
-              <div class="info">
-                <span>수비드로 조리한 제주산 돼지 안심 스테이크와 크림소스</span>
-              </div>
-          </ol>
-        </ul>
+          <span>영업시간 : 오전 11시 ~ 오후 7시</span>
+
+          <span>휴무일 : 매주 화요일 정기휴무</span>
+
+          <a href="https://www.instagram.com/chizizic_jeju">www.instagram.com/chizizic_jeju</a>
+
+
+        <br>
+        <br>
       </div>
-      <div class="menu" align="center">
-        <ul style="padding-left: 0px;">
-          <ol style="display: block;padding-left: 0px;">
-              <img class="mainPhoto" src="./img/Menu List/2.EggInHell/EggInHell1.jpg">
-              <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
-                <ol><img src="./img/Menu List/2.EggInHell/EggInHell1.jpg" style="border:groove;"></ol>
-                <ol><img src="./img/Menu List/2.EggInHell/EggInHell2.jpg"></ol>
-                <ol><img src="./img/Menu List/2.EggInHell/EggInHell3.jpg"></ol>
-              </ul>
-              <div class="menuName">에그인헬</div>
-              <div class="menuPrice">가격 : 9,000원</div>
-              <div class="info">
-                <div>토마토소스에 반숙계란을 올리고, 각종야채와 향신료가 들어간 스튜</div>
-              </div>
-          </ol>
-        </ul>
+      <div id="mainMenus">
+        <span align="center" style="font-size: 28px"><b>MENU</b></span>
+        <div class="menu" align="center">
+          <ul style="padding-left: 0px;">
+            <ol style="display: block;padding-left: 0px;">
+                <img class="mainPhoto" src="./img/Menu List/1.Steak/Steak 1.png">
+                <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
+                  <ol><img src="./img/Menu List/1.Steak/Steak 1.png" style="border:groove;"></ol>
+                  <ol><img src="./img/Menu List/1.Steak/Steak 2.png"></ol>
+                  <ol><img src="./img/Menu List/1.Steak/Steak 3.png"></ol>
+                </ul>
+            </ol>
+          </ul>
+          <span class="menuName">크림 수비드 스테이크</span>
+          <span class="menuPrice">가격 : 14,000원</span>
+          <div class="info">
+            <span>수비드로 조리한 제주산 돼지 안심 스테이크와 크림소스</span>
+          </div>
+        </div>
+        <div class="menu" align="center">
+          <ul style="padding-left: 0px;">
+            <ol style="display: block;padding-left: 0px;">
+                <img class="mainPhoto" src="./img/Menu List/2.EggInHell/EggInHell1.jpg">
+                <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
+                  <ol><img src="./img/Menu List/2.EggInHell/EggInHell1.jpg" style="border:groove;"></ol>
+                  <ol><img src="./img/Menu List/2.EggInHell/EggInHell2.jpg"></ol>
+                  <ol><img src="./img/Menu List/2.EggInHell/EggInHell3.jpg"></ol>
+                </ul>
+            </ol>
+          </ul>
+          <span class="menuName">에그인헬</span>
+          <span class="menuPrice">가격 : 9,000원</span>
+          <div class="info">
+            <span>토마토소스에 반숙계란을 올리고, 각종야채와 향신료가 들어간 스튜</span>
+          </div>
+        </div>
       </div>
       <br>
       <br>
       <br>
       <br>
-            <h2>원산지 표기</h2>
-      <h2>원산지 표기</h2>
-      <h2>원산지 표기</h2>
-      <h2>원산지 표기</h2>
+
     </div>
 
 
@@ -140,6 +144,5 @@
   </script>
 
 </div>
-
 
 </body></html>
