--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <script src="./js/jquery-3.6.3.min.js"></script>
       <title>Chizizic_Jeju</title>
       <style>
+
         body, p, a, ul, ol, li
         {
           margin: 0px;
@@ -11,7 +12,6 @@
         span
         {
             display: block;
-            font-size:
         }
 
 
@@ -43,7 +43,7 @@
         .menu .info
         {
           color: dimgray;
-          font-size: 20px;
+          font-size: 0.65em;
           margin-top: 20px;
         }
 
@@ -55,47 +55,48 @@
 
         .menu .menuName
         {
-          font-size: 25px;
+          font-size: 0.75em;
         }
         .menu .menuPrice
         {
-          font-size: 23px;
+          font-size: 0.7em;
           margin-top: 20px;
         }
 
         .storeDescription span
         {
+          font-size:0.7em;
           margin-bottom: 15px;
         }
       </style>
   </head>
-  <body style="margin-left: 0px;margin-right: 0px;background-color:#e7dedb;font-size: 14px;">
+  <body style="margin-left: 0px;margin-right: 0px;background-color:#e7dedb;font-size: 40px;">
     <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
-      <div style="margin-right:2%;font-size: 15px;color:#b7755d;">
-        <span><b>Language</b></span>
+      <div style="margin-right:2%;color:#b7755d;">
+        <span><b style="
+    font-size: 0.5em;
+">Language</b></span>
       </div>
     </nav>
     <div class="title">
-      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;font-size: 300%;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
-        <span style="font-size: 145px;">치지직</span>
-        <span style="font-size: 20.6pt;padding-top: 8%;">우리의 설레임이 구워지는 소리</span>
+      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
+        <span style="
+    font-size: 3em;
+">치지직</span>
+        <span style="padding-top: 8%;">우리의 설레임이 구워지는 소리</span>
     </div>
     <div class="contents">
-      <div align="center" class="storeDescription" style="font-size: 25px;">
+      <div align="center" class="storeDescription">
         <br>
-
           <span>영업시간 : 오전 11시 ~ 오후 7시</span>
-
           <span>휴무일 : 매주 화요일 정기휴무</span>
+          <span><a href="https://www.instagram.com/chizizic_jeju">www.instagram.com/chizizic_jeju</a></span>
+          <br>
 
-          <a href="https://www.instagram.com/chizizic_jeju">www.instagram.com/chizizic_jeju</a>
 
-
-        <br>
-        <br>
       </div>
       <div id="mainMenus">
-        <span align="center" style="font-size: 28px"><b>MENU</b></span>
+        <span align="center"><b>MENU</b></span>
         <div class="menu" align="center">
           <ul style="padding-left: 0px;">
             <ol style="display: block;padding-left: 0px;">
@@ -144,5 +145,6 @@
   </script>
 
 </div>
+
 
 </body></html>
