--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
         <div class="menu" align="center">
           <ul style="padding-left: 0px;">
             <ol style="display: block;padding-left: 0px;">
-                <img class="mainPhoto" src="./img/Menu List/1.Steak/Steak 1.png">
+                <img class="mainPhoto" src="./img/Menu List/1.Steak/test1.png">
                 <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
-                  <ol><img src="./img/Menu List/1.Steak/Steak 1.png" style="border:groove;"></ol>
-                  <ol><img src="./img/Menu List/1.Steak/Steak 2.png"></ol>
-                  <ol><img src="./img/Menu List/1.Steak/Steak 3.png"></ol>
+                  <ol><img src="./img/Menu List/1.Steak/test1.png" style="border:groove;"></ol>
+                  <ol><img src="./img/Menu List/1.Steak/test2.png"></ol>
+                  <ol><img src="./img/Menu List/1.Steak/test3.png"></ol>
                 </ul>
             </ol>
           </ul>
@@ -117,11 +117,11 @@
         <div class="menu" align="center">
           <ul style="padding-left: 0px;">
             <ol style="display: block;padding-left: 0px;">
-                <img class="mainPhoto" src="./img/Menu List/2.EggInHell/EggInHell1.jpg">
+                <img class="mainPhoto" src="./img/Menu List/2.EggInHell/test1.png">
                 <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
-                  <ol><img src="./img/Menu List/2.EggInHell/EggInHell1.jpg" style="border:groove;"></ol>
-                  <ol><img src="./img/Menu List/2.EggInHell/EggInHell2.jpg"></ol>
-                  <ol><img src="./img/Menu List/2.EggInHell/EggInHell3.jpg"></ol>
+                  <ol><img src="./img/Menu List/2.EggInHell/test1.png" style="border:groove;"></ol>
+                  <ol><img src="./img/Menu List/2.EggInHell/test2.png"></ol>
+                  <ol><img src="./img/Menu List/2.EggInHell/test3.png"></ol>
                 </ul>
             </ol>
           </ul>
@@ -145,6 +145,7 @@
   </script>
 
 </div>
+
 
 
 </body></html>
