--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
             display: block;
         }
 
+        @font-face {
+            font-family: 'TTTtangsbudaejjigaeB';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/TTTtangsbudaejjigaeB.woff2') format('woff2');
+            font-weight: 700;
+            font-style: normal;
+        }
+
+        @font-face {
+    font-family: 'NanumSquareNeo-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'KyoboHand';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/KyoboHand.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
         ul.subPhotos ol
         {
@@ -32,7 +52,6 @@
         {
           margin-bottom:10px;
         }
-
 
 
         .menu
@@ -74,29 +93,30 @@
     <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
       <div style="margin-right:2%;color:#b7755d;">
         <span><b style="
-    font-size: 0.5em;
+    font-size:0.7em; font-family:'KyoboHand';
 ">Language</b></span>
       </div>
     </nav>
     <div class="title">
-      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px">
+      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px;font-family: 'TTTtangsbudaejjigaeB';">
         <span style="
     font-size: 3em;
 ">치지직</span>
         <span style="padding-top: 8%;">우리의 설레임이 구워지는 소리</span>
     </div>
     <div class="contents">
-      <div align="center" class="storeDescription">
+      <div align="center" class="storeDescription" style="font-family: 'KyoboHand';">
+        <br>
         <br>
           <span>영업시간 : 오전 11시 ~ 오후 7시</span>
-          <span>휴무일 : 매주 화요일 정기휴무</span>
+          <span>휴무일 : 매주 화요일</span>
           <span><a href="https://www.instagram.com/chizizic_jeju">www.instagram.com/chizizic_jeju</a></span>
           <br>
 
 
       </div>
-      <div id="mainMenus">
-        <span align="center"><b>MENU</b></span>
+      <div id="mainMenus" style="font-family:'KyoboHand'">
+        <span align="center" ><b>MENU</b></span>
         <div class="menu" align="center">
           <ul style="padding-left: 0px;">
             <ol style="display: block;padding-left: 0px;">
