--- a/index.html
+++ b/index.html
@@ -89,22 +89,29 @@
         }
       </style>
   </head>
-  <body style="margin-left: 0px;margin-right: 0px;background-color:#e7dedb;font-size: 40px;">
+  <body style="padding-left: px;margin-right: 0px;background-color: #e5f0f1;font-size: 40px;">
     <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
-      <div style="margin-right:2%;color:#b7755d;">
+      <div style="margin-right:2%;color: #878282;">
         <span><b style="
     font-size:0.7em; font-family:'KyoboHand';
 ">Language</b></span>
       </div>
     </nav>
     <div class="title">
-      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #b7755d;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px;font-family: 'TTTtangsbudaejjigaeB';">
-        <span style="
+      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #ffc107;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px;font-family: 'TTTtangsbudaejjigaeB';">
+        <img src="./img/main/chizizic.png" style="
+    width: 643;
+"> <span style="
     font-size: 3em;
+    display: none;
 ">치지직</span>
-        <span style="padding-top: 8%;">우리의 설레임이 구워지는 소리</span>
+        <span style="padding-top: 8%;font-family: 'KyoboHand';">우리의 설레임이 구워지는 소리</span>
+      </div>
     </div>
-    <div class="contents">
+    <div class="contents" style="
+    padding-left: 60px;
+    padding-right: 60px;
+">
       <div align="center" class="storeDescription" style="font-family: 'KyoboHand';">
         <br>
         <br>
@@ -116,13 +123,13 @@
 
       </div>
       <div id="mainMenus" style="font-family:'KyoboHand'">
-        <span align="center" ><b>MENU</b></span>
+        <span align="center"><b>MENU</b></span>
         <div class="menu" align="center">
           <ul style="padding-left: 0px;">
             <ol style="display: block;padding-left: 0px;">
                 <img class="mainPhoto" src="./img/Menu List/1.Steak/test1.png">
                 <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
-                  <ol><img src="./img/Menu List/1.Steak/test1.png" style="border:groove;"></ol>
+                  <ol><img src="./img/Menu List/1.Steak/test1.png" style="/* border:groove; */"></ol>
                   <ol><img src="./img/Menu List/1.Steak/test2.png"></ol>
                   <ol><img src="./img/Menu List/1.Steak/test3.png"></ol>
                 </ul>
@@ -139,7 +146,7 @@
             <ol style="display: block;padding-left: 0px;">
                 <img class="mainPhoto" src="./img/Menu List/2.EggInHell/test1.png">
                 <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
-                  <ol><img src="./img/Menu List/2.EggInHell/test1.png" style="border:groove;"></ol>
+                  <ol><img src="./img/Menu List/2.EggInHell/test1.png" style="/* border:groove; */"></ol>
                   <ol><img src="./img/Menu List/2.EggInHell/test2.png"></ol>
                   <ol><img src="./img/Menu List/2.EggInHell/test3.png"></ol>
                 </ul>
@@ -148,7 +155,7 @@
           <span class="menuName">에그인헬</span>
           <span class="menuPrice">가격 : 9,000원</span>
           <div class="info">
-            <span>토마토소스에 반숙계란을 올리고, 각종야채와 향신료가 들어간 스튜</span>
+            <span>토마토소스에 반숙계란을 올리고, 각종 야채와 향신료가 들어간 스튜</span>
           </div>
         </div>
       </div>
@@ -164,7 +171,9 @@
 
   </script>
 
-</div>
+
+
+
 
 
 
