--- a/index.html
+++ b/index.html
@@ -53,6 +53,50 @@
     font-weight: normal;
     font-style: normal;
 }
+
+
+@font-face{
+  font-family:'bitbit';
+  src:url('//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff'),url('//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff2') ;
+}
+
+@import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
+
+@font-face {
+    font-family: 'Humanbumsuk';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/Humanbumsuk.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Vitro_pride';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.0/Vitro_pride.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'SF_HailSnow';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/SF_HailSnow.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'beanpoleotL00';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/beanpoleotL00.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
         ul.subPhotos ol
         {
             display: contents;
@@ -63,7 +107,6 @@
           margin-left: 2%;
           margin-right: 2%;
           display: inline;
-          border: outset;
         }
 
         #language ol
@@ -87,7 +130,6 @@
         .menu .mainPhoto
         {
           width: 637px;
-          border: outset;
         }
 
         .menu .menuName
@@ -111,26 +153,27 @@
     <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
       <div style="margin-right:2%;color: #878282;">
         <span><b style="
-    font-size:0.7em; font-family:'KyoboHand';
+    font-size: 0.6em;
+    font-family: 'Vitro_pride';
 ">Language</b></span>
       </div>
     </nav>
     <div class="title">
-      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #ffc107;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px;font-family: 'TTTtangsbudaejjigaeB';">
+      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #ffbe5e;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px;font-family: 'TTTtangsbudaejjigaeB';">
         <img src="./img/main/chizizic.png" style="
     width: 643;
 "> <span style="
     font-size: 3em;
     display: none;
 ">치지직</span>
-        <span style="padding-top: 8%;font-family: 'KyoboHand';">우리의 설레임이 구워지는 소리</span>
+        <span style="padding-top: 4%;font-family: 'SF_HailSnow';">우리의 설레임이 구워지는 소리</span>
       </div>
     </div>
     <div class="contents" style="
     padding-left: 60px;
     padding-right: 60px;
 ">
-      <div align="center" class="storeDescription" style="font-family: 'KyoboHand';">
+      <div align="center" class="storeDescription" style="font-family: 'Vitro_pride';">
         <br>
         <br>
           <span>영업시간 : 오전 11시 ~ 오후 7시</span>
@@ -140,23 +183,23 @@
 
 
       </div>
-      <div id="mainMenus" style="font-family:'KyoboHand'">
-        <span align="center"><b>MENU</b></span>
+      <div id="mainMenus" style="font-family: 'Vitro_pride';">
+        <span align="center"><b>&lt; MENU &gt;</b></span>
         <div class="menu" align="center">
           <ul style="padding-left: 0px;">
             <ol style="display: block;padding-left: 0px;">
                 <img class="mainPhoto" src="./img/Menu List/1.Steak/test1.png">
                 <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
-                  <ol><img src="./img/Menu List/1.Steak/test1.png" style="/* border:groove; */"></ol>
+                  <ol><img src="./img/Menu List/1.Steak/test1.png" style=""></ol>
                   <ol><img src="./img/Menu List/1.Steak/test2.png"></ol>
                   <ol><img src="./img/Menu List/1.Steak/test3.png"></ol>
                 </ul>
             </ol>
           </ul>
-          <span class="menuName">크림 수비드 스테이크</span>
-          <span class="menuPrice">가격 : 14,000원</span>
+          <span class="menuName">제주 수비드 스테이크 w크림</span>
+          <span class="menuPrice">14,000원</span>
           <div class="info">
-            <span>수비드로 조리한 제주산 돼지 안심 스테이크와 크림소스</span>
+            <span>수비드로 조리한 제주산 돼지 안심 스테이크와 <br>양송이 버섯 크림소스의 만남  </span>
           </div>
         </div>
         <div class="menu" align="center">
@@ -170,10 +213,11 @@
                 </ul>
             </ol>
           </ul>
-          <span class="menuName">에그인헬</span>
-          <span class="menuPrice">가격 : 9,000원</span>
+          <span class="menuName">제주인헬</span>
+          <span class="menuPrice">9,000원</span>
           <div class="info">
-            <span>토마토소스에 반숙계란을 올리고, 각종 야채와 향신료가 들어간 스튜</span>
+            <span>토마토소스에 반숙계란을 올리고<br>각종 야채와 향신료를 넣은 스튜
+</span>
           </div>
         </div>
       </div>
@@ -188,6 +232,8 @@
   <script>
 
   </script>
+
+
 
 
 
