--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         .menu .info
         {
           color: dimgray;
-          font-size: 0.65em;
+          font-size: 0.5em;
           margin-top: 20px;
         }
 
@@ -134,7 +134,7 @@
 
         .menu .menuName
         {
-          font-size: 0.75em;
+          font-size: 0.8em;
         }
         .menu .menuPrice
         {
@@ -149,7 +149,7 @@
         }
       </style>
   </head>
-  <body style="padding-left: px;margin-right: 0px;background-color: #e5f0f1;font-size: 40px;">
+  <body style="padding-left: px;margin-right: 0px;background-color: #ffff;font-size: 40px;">
     <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
       <div style="margin-right:2%;color: #878282;">
         <span><b style="
@@ -178,7 +178,9 @@
         <br>
           <span>영업시간 : 오전 11시 ~ 오후 7시</span>
           <span>휴무일 : 매주 화요일</span>
-          <span><a href="https://www.instagram.com/chizizic_jeju">www.instagram.com/chizizic_jeju</a></span>
+          <span><img src="./img/main/instagram__icon.png" style="
+    width: 35px;
+"> <a href="https://www.instagram.com/chizizic_jeju">chizizic_jeju</a></span>
           <br>
 
 
@@ -187,26 +189,26 @@
         <span align="center"><b>&lt; MENU &gt;</b></span>
         <div class="menu" align="center">
           <ul style="padding-left: 0px;">
-            <ol style="display: block;padding-left: 0px;">
-                <img class="mainPhoto" src="./img/Menu List/1.Steak/test1.png">
-                <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
-                  <ol><img src="./img/Menu List/1.Steak/test1.png" style=""></ol>
-                  <ol><img src="./img/Menu List/1.Steak/test2.png"></ol>
-                  <ol><img src="./img/Menu List/1.Steak/test3.png"></ol>
+            <ol style="display: block;padding-left: 0px;margin-bottom: 40px;">
+                <img class="mainPhoto" src="./img/Menu List/1.Steak/Steak 1.png">
+                <ul class="subPhotos" style="padding-left: 0px;width: 637px;padding-top: 40px;background-color: #E6E6E6;padding-top: 40px;padding-bottom: 30px;">
+                  <ol><img src="./img/Menu List/1.Steak/Steak 1.png" style=""></ol>
+                  <ol><img src="./img/Menu List/1.Steak/Steak 2.png"></ol>
+                  <ol><img src="./img/Menu List/1.Steak/Steak 3.png"></ol>
                 </ul>
             </ol>
           </ul>
           <span class="menuName">제주 수비드 스테이크 w크림</span>
           <span class="menuPrice">14,000원</span>
           <div class="info">
-            <span>수비드로 조리한 제주산 돼지 안심 스테이크와 <br>양송이 버섯 크림소스의 만남  </span>
+            <span>수비드로 조리한 제주산 돼지 안심 <br>스테이크와 양송이 크림소스의 만남  </span>
           </div>
         </div>
         <div class="menu" align="center">
           <ul style="padding-left: 0px;">
             <ol style="display: block;padding-left: 0px;">
                 <img class="mainPhoto" src="./img/Menu List/2.EggInHell/test1.png">
-                <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;">
+                <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;width: 637px;background-color: #E6E6E6;">
                   <ol><img src="./img/Menu List/2.EggInHell/test1.png" style="/* border:groove; */"></ol>
                   <ol><img src="./img/Menu List/2.EggInHell/test2.png"></ol>
                   <ol><img src="./img/Menu List/2.EggInHell/test3.png"></ol>
@@ -225,20 +227,8 @@
       <br>
       <br>
       <br>
-
     </div>
-
-
   <script>
-
   </script>
-
-
-
-
-
-
-
-
 
 </body></html>
