--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       </div>
     </nav>
     <div class="title">
-      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #ffbe5e;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px;font-family: 'TTTtangsbudaejjigaeB';">
+      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #bed3f1;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px;">
         <img src="./img/main/chizizic.png" style="
     width: 643;
 "> <span style="
@@ -215,7 +215,7 @@
                 </ul>
             </ol>
           </ul>
-          <span class="menuName">제주인헬</span>
+          <span class="menuName">에그인헬</span>
           <span class="menuPrice">9,000원</span>
           <div class="info">
             <span>토마토소스에 반숙계란을 올리고<br>각종 야채와 향신료를 넣은 스튜
