--- a/index.html
+++ b/index.html
@@ -1,234 +1,109 @@
 <html><head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, target-densitydpi=medium-dpi"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="./js/jquery-3.6.3.min.js"></script>
-      <title>Chizizic_Jeju</title>
-      <style>
-
-        body, p, a, ul, ol, li
-        {
-          margin: 0px;
-          padding: 0px;
-        }
-
-        span
-        {
-            display: block;
-        }
-
-        @font-face {
-            font-family: 'TTTtangsbudaejjigaeB';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/TTTtangsbudaejjigaeB.woff2') format('woff2');
-            font-weight: 700;
-            font-style: normal;
-        }
-
-        @font-face {
-    font-family: 'NanumSquareNeo-Variable';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'KyoboHand';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/KyoboHand.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'GangwonEdu_OTFBoldA';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'LeferiPoint-WhiteObliqueA';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiPoint-WhiteObliqueA.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Cafe24Oneprettynight';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Oneprettynight.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-
-@font-face{
-  font-family:'bitbit';
-  src:url('//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff'),url('//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff2') ;
-}
-
-@import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
-
-@font-face {
-    font-family: 'Humanbumsuk';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/Humanbumsuk.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Vitro_pride';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.0/Vitro_pride.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'SF_HailSnow';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/SF_HailSnow.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'beanpoleotL00';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/beanpoleotL00.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-        ul.subPhotos ol
-        {
-            display: contents;
-        }
-        ul.subPhotos ol img
-        {
-          width:166.594px;
-          margin-left: 2%;
-          margin-right: 2%;
-          display: inline;
-        }
-
-        #language ol
-        {
-          margin-bottom:10px;
-        }
-
-
-        .menu
-        {
-          margin-bottom: 147px;
-        }
-
-        .menu .info
-        {
-          color: dimgray;
-          font-size: 0.5em;
-          margin-top: 20px;
-        }
-
-        .menu .mainPhoto
-        {
-          width: 637px;
-        }
-
-        .menu .menuName
-        {
-          font-size: 0.8em;
-        }
-        .menu .menuPrice
-        {
-          font-size: 0.7em;
-          margin-top: 20px;
-        }
-
-        .storeDescription span
-        {
-          font-size:0.7em;
-          margin-bottom: 15px;
-        }
-      </style>
+    <script src="./js/main.js"></script>
+    <link type="text/css" rel="stylesheet" href="./css/main.css">
+    <link type="text/css" rel="stylesheet" href="./css/font.css">
+    <link type="text/css" rel="stylesheet" href="./css/slide.css">
+    <title>Chizizic_Jeju</title>
   </head>
-  <body style="padding-left: px;margin-right: 0px;background-color: #ffff;font-size: 40px;">
-    <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
+  <body style="padding-left: px;margin-right: 0px;background-color: #ffff;">
+    <!--<nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
       <div style="margin-right:2%;color: #878282;">
-        <span><b style="
-    font-size: 0.6em;
-    font-family: 'Vitro_pride';
-">Language</b></span>
-      </div>
-    </nav>
+        <span><b style="font-size: 0.55em;font-family: 'Vitro_pride';">Language</b></span></div></nav>-->
     <div class="title">
-      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 10%;padding-right: 10%;background-color: #bed3f1;color:white;font-weight: bold;font-family: sans-serif;margin-top: 0px;">
-        <img src="./img/main/chizizic.png" style="
-    width: 643;
-"> <span style="
-    font-size: 3em;
-    display: none;
-">치지직</span>
-        <span style="padding-top: 4%;font-family: 'SF_HailSnow';">우리의 설레임이 구워지는 소리</span>
-      </div>
-    </div>
-    <div class="contents" style="
-    padding-left: 60px;
-    padding-right: 60px;
-">
+      <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 5%;padding-right: 5%;background-color: #bed3f1;color:white;font-weight: bold;font-family:sans-serif;margin-top: 0px;">
+        <img src="./img/main/chizizic.png" style="width: 110%;">
+        <!--<span style="font-size: 3em; display: none;">치지직</span>-->
+        <span style="padding-top: 4%;font-family: 'SF_HailSnow';font-size: 0.55em;">우리의 설레임이 구워지는 소리</span></div></div>
+    <div class="contents">
       <div align="center" class="storeDescription" style="font-family: 'Vitro_pride';">
-        <br>
-        <br>
           <span>영업시간 : 오전 11시 ~ 오후 7시</span>
           <span>휴무일 : 매주 화요일</span>
-          <span><img src="./img/main/instagram__icon.png" style="
-    width: 35px;
-"> <a href="https://www.instagram.com/chizizic_jeju">chizizic_jeju</a></span>
-          <br>
-
-
-      </div>
+          <span><img src="./img/main/instagram__icon.png" style="width: 25px;"> <a href="https://www.instagram.com/chizizic_jeju">chizizic_jeju</a></span></div>
       <div id="mainMenus" style="font-family: 'Vitro_pride';">
-        <span align="center"><b>&lt; MENU &gt;</b></span>
-        <div class="menu" align="center">
-          <ul style="padding-left: 0px;">
-            <ol style="display: block;padding-left: 0px;margin-bottom: 40px;">
-                <img class="mainPhoto" src="./img/Menu List/1.Steak/Steak 1.png">
-                <ul class="subPhotos" style="padding-left: 0px;width: 637px;padding-top: 40px;background-color: #E6E6E6;padding-top: 40px;padding-bottom: 30px;">
-                  <ol><img src="./img/Menu List/1.Steak/Steak 1.png" style=""></ol>
-                  <ol><img src="./img/Menu List/1.Steak/Steak 2.png"></ol>
-                  <ol><img src="./img/Menu List/1.Steak/Steak 3.png"></ol>
-                </ul>
-            </ol>
-          </ul>
-          <span class="menuName">제주 수비드 스테이크 w크림</span>
+        <span align="center"><b style="font-size: 0.7em;">&lt; MENU &gt;</b></span>
+      <div class="menu" align="center">
+        <div class="menu1 album">
+          <div class="images">
+            <img src="./img/Menu List/1.Steak/Steak 1.png">
+            <img src="./img/Menu List/1.Steak/Steak 2.png">
+            <img src="./img/Menu List/1.Steak/Steak 3.png">
+          </div>
+        </div>
+          <span class="menuName">동문 수테이크</span>
           <span class="menuPrice">14,000원</span>
           <div class="info">
-            <span>수비드로 조리한 제주산 돼지 안심 <br>스테이크와 양송이 크림소스의 만남  </span>
+            <span>수비드로 조리한 제주산 돼지 안심<br>스테이크와 양송이 크림소스의 만남</span>
           </div>
         </div>
         <div class="menu" align="center">
-          <ul style="padding-left: 0px;">
-            <ol style="display: block;padding-left: 0px;">
-                <img class="mainPhoto" src="./img/Menu List/2.EggInHell/test1.png">
-                <ul class="subPhotos" style="padding-left: 0px;padding-top: 20px;width: 637px;background-color: #E6E6E6;">
-                  <ol><img src="./img/Menu List/2.EggInHell/test1.png" style="/* border:groove; */"></ol>
-                  <ol><img src="./img/Menu List/2.EggInHell/test2.png"></ol>
-                  <ol><img src="./img/Menu List/2.EggInHell/test3.png"></ol>
-                </ul>
-            </ol>
-          </ul>
+          <div class="menu2 album">
+            <div class="images">
+              <img src="./img/Menu List/2.EggInHell/EggInHell1.jpg">
+              <img src="./img/Menu List/2.EggInHell/EggInHell2.jpg">
+              <img src="./img/Menu List/2.EggInHell/EggInHell3.jpg">
+            </div>
+          </div>
           <span class="menuName">에그인헬</span>
           <span class="menuPrice">9,000원</span>
           <div class="info">
-            <span>토마토소스에 반숙계란을 올리고<br>각종 야채와 향신료를 넣은 스튜
-</span>
+            <span>토마토소스에 반숙계란을 올리고<br>각종 야채와 향신료를 넣은 스튜</span>
           </div>
         </div>
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
     </div>
   <script>
+  const images = document.getElementsByClassName("images");
+  var imageWidths = new Array;
+  for (var i = 0; i < images.length; i++) {
+    var image = images[i];
+    imageWidths[i] = image.width;
+    image.addEventListener('touchstart', touch_start);
+    image.addEventListener('touchend', touch_end);
+  }
+  let curPos = 0;
+  let postion = 0;
+  let start_x, end_x;
+
+  function prev(targetElement){
+    if (curPos > 0) {
+      curPos--;
+    }
+    else {
+      curPos = 2;
+    }
+    targetElement.style.transform = 'translateX('+-(curPos*targetElement.clientWidth)+'px)';
+  }
+
+  function next(targetElement){
+    if (curPos < 2) {
+      curPos++;
+    }
+    else {
+      curPos = 0;
+    }
+    targetElement.style.transform = 'translateX('+-(curPos*targetElement.clientWidth)+'px)';
+  }
+
+  function touch_start(event) {
+    start_x = event.touches[0]?.pageX;
+  }
+
+  function touch_end(event) {
+    end_x = event.changedTouches[0].pageX;
+    if (start_x > end_x) {
+      next(event.target.parentNode);
+    }
+    else {
+      prev(event.target.parentNode);
+    }
+  }
+
   </script>
+
+
 
 </body></html>
