--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
 
   function touch_end(event) {
     end_x = event.changedTouches[0].pageX;
+    if (start_x == end_x) {
+      return;
+    }
+    
     if (start_x > end_x) {
       next(event.target.parentNode);
     }
