--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span style="padding-top: 4%;font-family: 'SF_HailSnow';font-size: 0.55em;">우리의 설레임이 구워지는 소리</span></div></div>
     <div class="contents">
       <div align="center" class="storeDescription" style="font-family: 'Vitro_pride';">
-          <span>영업시간 : 오전 11시 ~ 오후 7시</span>
+          <span>영업시간 : 오전 11시 ~ 오후 9시<br>(라스트 오더 : 오후 8시 30분)</span>
           <span>휴무일 : 매주 화요일</span>
           <span><img src="./img/main/instagram__icon.png" style="width: 25px;"> <a href="https://www.instagram.com/chizizic_jeju">chizizic_jeju</a></span></div>
       <div id="mainMenus" style="font-family: 'Vitro_pride';">
@@ -51,6 +51,7 @@
           <span class="menuPrice">9,000원</span>
           <div class="info">
             <span>토마토소스에 반숙계란을 올리고<br>각종 야채와 향신료를 넣은 스튜</span>
+            <span>(바질 수급이 어려울때 다른 채소로 대체)</span>
           </div>
         </div>
       </div>
@@ -97,7 +98,7 @@
     if (start_x == end_x) {
       return;
     }
-    
+
     if (start_x > end_x) {
       next(event.target.parentNode);
     }
