--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
     <title>Chizizic_Jeju</title>
   </head>
   <body style="padding-left: px;margin-right: 0px;background-color: #ffff;">
-    <!--<nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
-      <div style="margin-right:2%;color: #878282;">
-        <span><b style="font-size: 0.55em;font-family: 'Vitro_pride';">Language</b></span></div></nav>-->
+    <nav align="right" style="padding-left: 1%;padding-top: 1%;padding-right: 1%;padding-bottom: 1%;">
+      <div style="display: inline-block; color: #878282;">
+        <span align="center" style="width: 125px;padding-bottom: 5px;border-bottom: none;"><b style="font-size: 0.55em;font-family: 'Vitro_pride';" onclick="toggle_language()">Language</b></span>
+<p id="language" align="center" style="
+    font-size: 0.4em;
+    background-color: #fff;
+    padding-bottom: 6px;
+    position: absolute;
+    width: 125px;
+    display: none;
+">
+    <a style="
+    display: block;
+">한국어</a><a style="
+    display: block;
+">English</a>
+<a style="
+    display: block;
+">中国话</a>
+<a style="
+    display: block;
+">日本語</a>
+</p></div></nav>
+
     <div class="title">
       <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 5%;padding-right: 5%;background-color: #bed3f1;color:white;font-weight: bold;font-family:sans-serif;margin-top: 0px;">
         <img src="./img/main/chizizic.png" style="width: 100%;">
@@ -104,6 +125,19 @@
     }
     else {
       prev(event.target.parentNode);
+    }
+  }
+
+  const language = document.getElementById("language");
+
+  function toggle_language(){
+    if (language.style.display == 'none') {
+      language.style.display = 'block';
+      language.previousElementSibling.style.borderBottom = 'groove';
+    }
+    else if (language.style.display == 'block') {
+      language.style.display = 'none';
+      language.previousElementSibling.style.borderBottom = 'none';
     }
   }
 
