--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       <div id="dongmoonSousVideSteak" class="menu" align="center">
         <div class="menu1 album">
           <div class="images">
-            <img src="./img/Menu List/1.Steak/Steak 1.png">
-            <img src="./img/Menu List/1.Steak/Steak 2.png">
-            <img src="./img/Menu List/1.Steak/Steak 3.png">
+            <img src="./img/Menu List/1.Steak/Steak 1.jpg">
+            <img src="./img/Menu List/1.Steak/Steak 2.jpg">
+            <img src="./img/Menu List/1.Steak/Steak 3.jpg">
           </div>
         </div>
           <span class="menuName">동문 수테이크</span>
@@ -68,7 +68,7 @@
       <div id="eggInHell" class="menu" align="center">
         <div class="menu2 album">
           <div class="images">
-              <img src="./img/Menu List/2.EggInHell/EggInHell1.jpg">
+            <img src="./img/Menu List/2.EggInHell/EggInHell1.jpg">
               <img src="./img/Menu List/2.EggInHell/EggInHell2.jpg">
               <img src="./img/Menu List/2.EggInHell/EggInHell3.jpg">
           </div>
@@ -76,7 +76,7 @@
           <span class="menuName">에그인헬</span>
           <span class="menuPrice">9,000원</span>
           <div class="info">
-            <span>토마토소스에 반숙계란을 올리고<br>각종 야채와 향신료를 넣은 스튜</span>
+            <span>토마토소스에 각종 야채와 향신료를 넣고 반숙계란을 올린 스튜</span>
           </div>
         </div>
       </div>
