--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <span class="menuName">에그인헬</span>
           <span class="menuPrice">9,000원</span>
           <div class="info">
-            <span>토마토소스에 각종 야채와 향신료를 넣고 반숙계란을 올린 스튜</span>
+            <span>토마토소스에 각종 야채와 향신료를 넣고,<br>반숙계란을 올린 스튜</span>
           </div>
         </div>
       </div>
@@ -171,8 +171,8 @@
         dongmoonSousVideSteakInfo.innerText = "수비드로 조리한 제주산 돼지 안심\r\n스테이크와 양송이 크림소스의 만남";
 
         eggInHellName.innerText = "에그인헬";
-        eggInHellPrice.innerText = "9,000원";
-        eggInHellInfo.innerText = "토마토소스에 반숙계란을 올리고\r\n각종 야채와 향신료를 넣은 스튜";
+        eggInHellPrice.innerText = "10,000원";
+        eggInHellInfo.innerText = "토마토소스에 각종 야채와 향신료를 넣고, \r\n 반숙계란을 올린 스튜";
         break;
       case 'english':
         slogan.innerText = "The burning sound that makes us excited";
@@ -184,21 +184,21 @@
         dongmoonSousVideSteakInfo.innerText = "Jeju pork tenderloin steaks cooked under vacuum & mushroom cream sauce";
 
         eggInHellName.innerText = "Egg In Hell";
-        eggInHellPrice.innerText = "9,000won";
+        eggInHellPrice.innerText = "10,000won";
         eggInHellInfo.innerText = "Stew with fresh vegetables seasoned with spices & Tomato Sauce topped with soft cooked egg";
         break;
       case 'japanese':
-        slogan.innerText = "私たちのときめきが焼ける音";
+        slogan.innerText = "私たちをトキメかせる音、ジュー";
         businessHours.innerText = "営業時間:午前11時~午後9時\r\n(ラストオーダー:午後8時30分)";
         holiday.innerText = "休業日:毎週火曜日";
 
-        dongmoonSousVideSteakName.innerText = "同門ステイク";
+        dongmoonSousVideSteakName.innerText = "東門ステーキ";
         dongmoonSousVideSteakPrice.innerText = "14,000ウォン";
-        dongmoonSousVideSteakInfo.innerText = "守備で調理した済州(チェジュ)産豚のバラ\r\nステーキと、西洋種のマツタケ、クリームソースの出会い";
+        dongmoonSousVideSteakInfo.innerText = "スーヴィードで調理した済州産豚ヒレステーキとマッシュルームクリームソースの出会い";
 
-        eggInHellName.innerText = "エグインヘル";
-        eggInHellPrice.innerText = "9,000ウォン";
-        eggInHellInfo.innerText = "トマトソースに半熟の卵を上げて\r\n各種の野菜と香辛料を入れたシチュー";
+        eggInHellName.innerText = "シャクシュカ";
+        eggInHellPrice.innerText = "10,000ウォン";
+        eggInHellInfo.innerText = "細かく刻んだ野菜をスパイスを効かせたトマトソースで軽く煮込み、その上に卵を落として焼いたシチュー";
         break;
       case 'chinese':
         slogan.innerText = "我们的悸动 烤的声音";
@@ -210,8 +210,8 @@
         dongmoonSousVideSteakInfo.innerText = "用低温慢煮 制作的 济州产猪里脊\r\n牛排和洋松茸 奶油酱的相遇";
 
         eggInHellName.innerText = "北非蛋";
-        eggInHellPrice.innerText = "9,000韩元";
-        eggInHellInfo.innerText = "放上番茄酱和半熟鸡蛋 各种蔬菜和香料的炖菜";
+        eggInHellPrice.innerText = "10,000韩元";
+        eggInHellInfo.innerText = "各种蔬菜和香料 加上半熟鸡蛋和番茄酱 融合而成的炖菜";
         break;
     }
     toggle_language();
