--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <span class="menuName">동문 수테이크</span>
           <span class="menuPrice">14,000원</span>
           <div class="info">
-            <span>수비드로 조리한 제주산 돼지 안심<br>스테이크와 양송이 크림소스의 만남</span>
+            <span>수비드로 조리한<br>제주산 돼지 안심 스테이크와<br>양송이 크림소스의 만남</span>
           </div>
       </div>
       <div id="eggInHell" class="menu" align="center">
@@ -168,7 +168,7 @@
 
         dongmoonSousVideSteakName.innerText = "동문 수테이크";
         dongmoonSousVideSteakPrice.innerText = "14,000원";
-        dongmoonSousVideSteakInfo.innerText = "수비드로 조리한 제주산 돼지 안심\r\n스테이크와 양송이 크림소스의 만남";
+        dongmoonSousVideSteakInfo.innerText = "수비드로 조리한\r\n제주산 돼지 안심 스테이크와\r\n양송이 크림소스의 만남";
 
         eggInHellName.innerText = "에그인헬";
         eggInHellPrice.innerText = "10,000원";
