--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
   function touch_end(event) {
     end_x = event.changedTouches[0].pageX;
     if (start_x == end_x) {
+      alert("error");
       return;
     }
 
