--- a/index.html
+++ b/index.html
@@ -116,7 +116,12 @@
     targetElement.style.transform = 'translateX('+-(curPos*targetElement.clientWidth)+'px)';
   }
 
+var a = 0;
   function touch_start(event) {
+    if (a != 0) {
+      console.log(a++);
+      
+    }
     start_x = event.touches[0]?.pageX;
   }
 
