--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   }
 
   function touch_start(event) {
-      console.log("start point"+event.touches[0]?.pageX);
+      alert("start point"+event.touches[0]?.pageX);
     start_x = event.touches[0]?.pageX;
   }
 
