--- a/index.html
+++ b/index.html
@@ -116,8 +116,14 @@
     targetElement.style.transform = 'translateX('+-(curPos*targetElement.clientWidth)+'px)';
   }
 
+var a =0;
   function touch_start(event) {
-      alert("start point"+event.touches[0]?.pageX);
+if (a != 0) {
+  alert("start point"+event.touches[0]?.pageX);
+  
+}else {
+  a++;
+}
     start_x = event.touches[0]?.pageX;
   }
 
