--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
             <span>토마토소스에 각종 야채와 향신료를 넣고,<br>반숙계란을 올린 스튜</span>
           </div>
         </div>
+
+        <span align="center"><b style="font-size: 0.7em;">&lt; Drink &gt;</b></span>
+        <div id="cocaCola" class="menu" align="center">
+          <span class="menuName">코카콜라(355ml)</span>
+          <span class="menuPrice">2,000원</span>
+        </div>
+        <div id="chilsungSprite" class="menu" align="center">
+          <span class="menuName">칠성사이다(355ml)</span>
+          <span class="menuPrice">2,000원</span>
+        </div>
+
+        <span align="center"><b style="font-size: 0.7em;">&lt; Glass Wine &gt;</b></span>
+        <div id="chilsungSprite" class="menu" align="center">
+          <span class="menuName">쉬라즈(레드)</span>
+          <span class="menuPrice">7,000원</span>
+        </div>
+        <div id="chilsungSprite" class="menu" align="center">
+          <span class="menuName">쇼비뇽블랑(화이트)</span>
+          <span class="menuPrice">7,000원</span>
+        </div>
       </div>
     </div>
   <script>
@@ -184,17 +204,17 @@ for (var i = 0; i < albums.length; i++) {
         eggInHellInfo.innerText = "토마토소스에 각종 야채와 향신료를 넣고, \r\n 반숙계란을 올린 스튜";
         break;
       case 'english':
-        slogan.innerText = "The burning sound that makes us excited";
+        slogan.innerText = "Grilling sound that blows your mind";
         businessHours.innerText = "Welcome : AM 11:00 ~ PM 09:00\r\n(Last order : PM 08:30)";
         holiday.innerText = "Holiday : Every Tuesday";
 
         dongmoonSousVideSteakName.innerText = "Dongmoon Sous-Vide Steak";
         dongmoonSousVideSteakPrice.innerText = "14,000won";
-        dongmoonSousVideSteakInfo.innerText = "Jeju pork tenderloin steaks cooked under vacuum & mushroom cream sauce";
+        dongmoonSousVideSteakInfo.innerText = "Jeju pork tenderloin steak cooked under vacuum served with mushroom cream sauce";
 
         eggInHellName.innerText = "Egg In Hell";
         eggInHellPrice.innerText = "10,000won";
-        eggInHellInfo.innerText = "Stew with fresh vegetables seasoned with spices & Tomato Sauce topped with soft cooked egg";
+        eggInHellInfo.innerText = "Stew with fresh vegetables seasoned with spices & Tomato Sauce topped with sunny side up";
         break;
       case 'japanese':
         slogan.innerText = "私たちをトキメかせる音、ジュー";
